--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,14 @@ xcuserdata/
 #
 # Pods/
 
+*.xcuserstate  
+project.xcworkspace  
+xcuserdata  
+UserInterfaceState.xcuserstate  
+project.xcworkspace/  
+xcuserdata/  
+UserInterface.xcuserstate
+
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
